kubernetes/production/apps/default/mqtt/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app mqtt
  labels:
    app.kubernetes.io/name: *app
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0.20
          ports:
            - containerPort: 1883  # MQTT port
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-password
              mountPath: /mosquitto/config/mosquitto_passwd_file
              subPath: mosquitto_passwd_file
            - name: data
              mountPath: /mosquitto/data
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: mosquitto-password
          secret:
            secretName: mosquitto-password
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-data
