kubernetes/production/apps/default/mqtt/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  selector:
    app: mosquitto
  ports:
    - name: mosquitto
      port: 1883
