kubernetes/production/apps/default/mqtt/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-ingress-tcp
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - mqttsecure
  routes:
    - match: HostSNI(`mqtt.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: mosquitto-service
          port: 1883
  tls:
    secretName: production-tls
